--- a/c++-standards-committee-papers/p0142r0.md
+++ b/c++-standards-committee-papers/p0142r0.md
@@ -251,7 +251,7 @@ Having decided on the necessity to have a module declaration, the next question 
 
 We propose a hierarchical naming scheme for the name space of module-name in support of submodules, see §5.5.
 
-我们在模块名称的命名空间中提出了一种基于层级的命名方案，用于支持子模块，参考§5.5。 ❓ 
+我们在模块名称的命名空间中提出了一种基于层级的命名方案，用于支持子模块，参考§5.5。
 
 ### 5.2 Module Interface
 
@@ -284,7 +284,7 @@ or
 
 The braces in this context do not introduce a scope, they are used only for grouping purposes. A toplevel-declaration is either an import declaration \(see §5.3\), a module-export declaration, or an ordinary declaration. An import declaration states that all declarations exported by the nominated module are made available \(e.g. the names are available\) to the importing translation unit. A module-export declaration in the exported section means that the names exported by the nominated module are transitively accessible to any consumer \(e.g. importing translation unit\) of the current module.
 
-在此上下文中，大括号**不引入作用域**，它们仅用于分组。最顶层的声明可以是导入声明（参见§5.3）、模块导出声明或普通声明。导入声明声明了被指定模块导出的所有声明，对当前编译单元来说都是可见的（例如，名称是可见的）。导出部分中的模块导出声明意味着指定模块导出的名称对当前模块的任何使用者（例如，导入的编译单元）都是可传递访问的。 ❓ 
+在此上下文中，大括号**不引入作用域**，它们仅用于分组。最顶层的声明可以是导入声明（参见§5.3）、模块导出声明或普通声明。导入声明声明了被指定模块导出的所有声明，对当前编译单元来说都是可见的（例如，名称是可见的）。导出部分中的模块的导出声明，意味着指定模块导出的名称对当前模块的任何使用者（例如，导入的编译单元）都是可传递访问的。
 
 {% hint style="warning" %}
 **Rule 2** _No export declaration shall mention a non-exported entity, or an entity with internal linkage or no linkage._
@@ -295,7 +295,7 @@ The braces in this context do not introduce a scope, they are used only for grou
 {% hint style="info" %}
 **Note:** An entity may be declared as exported, and later defined without the exported keyword. Such an entity is still considered exported; only the properties that were computed in the export declaration are exported to the module consumers. In particular, a class that is only declared \(but not defined\) in an export declaration appears incomplete to the module’s consumers even if the class is completed later in the same module unit that declares the interface. Similarly a default argument not present in the export declaration is not visible to the module’s consumers. See §5.2.3.
 
-**注：**一个**实体可以声明为导出的，然后在没有导出关键字的情况下被定义**。这种实体仍然被认为是导出的；只有在导出声明中计算的属性才会被导出到模块使用者。特别地，**在导出声明中仅声明（但未定义）的类对模块的使用者来说是不完整的，即使在声明接口的模块单元后面完成了类** ❓ 。类似地，导出声明中没有出现的默认参数对于模块的使用者是不可见的。参考：§5.2.3。
+**注：**一个**实体可以声明为导出的，然后在没有导出关键字的情况下被定义**。这种实体仍然被认为是导出的；只有在导出声明中计算的属性才会被导出到模块使用者。特别地，**在导出声明中仅声明（但未定义）的类对模块的使用者来说是不完整的，即使在声明接口的模块单元后面完成了类**。类似地，导出声明中没有出现的默认参数对于模块的使用者是不可见的。参考：§5.2.3。
 {% endhint %}
 
 #### 5.2.2 Ownership
@@ -579,7 +579,7 @@ the name `Calc` in the modules `Syntax` and `Evaluator` refers to the same names
 
 We propose no fundamental change to the rules governing constexpr or inline functions. Any exported constexpr or inline function must be defined in the module unit providing the interface of the owning module. The definition itself need not be exported.
 
-我们不建议对constexpr或内联函数的规则进行根本更改。任何导出的constexpr或内联函数都必须在提供接口的所属模块单元中定义。定义本身不需要被导出。 ❓ 
+我们不建议对constexpr或内联函数的规则进行根本更改。任何导出的constexpr或内联函数都必须在提供接口的所属模块单元中定义。定义本身不需要被导出。
 
 ### 5.10 Templates
 
@@ -591,7 +591,7 @@ Standard C++’s compilation model of templates relies on copy-and-paste of thei
 
 Definitions for templates listed in a module interface are subject to constraints similar to those for inline functions. Furthermore, a class template that is only declared \(but not defined\) in an export declaration is seen as an incomplete class template by importing translation units.
 
-模块接口中列出的模板定义受到与内联函数类似的约束。此外，仅在导出声明中声明（但未定义）的类模板被导入编译单元视为不完整的类模板。 ❓ 
+模块接口中列出的模板定义受到与内联函数类似的约束。此外，仅在导出声明中声明（但未定义）的类模板被导入编译单元视为不完整的类模板。
 
 #### 5.10.2 Explicit Instantiations
 
@@ -621,5 +621,5 @@ the definition of the class `Vec<int>` is exported to any translation unit that 
 
 Conversely, any explicit instantiation not in an export declaration is not exported; therefore the resulting definition is local to the containing translation unit. If a specialization is requested in another translation unit, that would otherwise match the non-exported instantiation, the usual rules for template specializations applies as well as the ODR.
 
-相反，导出声明中没有的任何显式实例化都不会导出；因此，定义的结果是导入模块编译单元的本地定义。如果在另一个编译单元中请求特化，它将与非导出实例化匹配 ❓ ，模板特化的通常规则和ODR一样都是适用的。
+相反，导出声明中没有的任何显式实例化都不会导出；因此，定义的结果是导入模块编译单元的本地定义。如果在另一个编译单元中请求特化，它将与非导出实例化匹配，模板特化的通常规则和ODR一样都是适用的。
 
